--- a/src/aura/Datatable/Datatable.cmp
+++ b/src/aura/Datatable/Datatable.cmp
@@ -7,6 +7,7 @@
     <aura:handler name="cadencePagination" event="c:CadPagination" action="{!c.handleComponentEvent}"/>
     
     <!-- datatable attributes -->
+    <aura:attribute name="title" type="String"/>
     <aura:attribute name="data" type="List"/>
     <aura:attribute name="rawData" type="List"/>
     <aura:attribute name="rawDataForFilter" type="List"/>
@@ -26,35 +27,38 @@
     
     <aura:method name="clearRowSelection" action="{!c.deselectRows}"/> 
     <aura:handler name="change" value="{!v.data}" action="{!c.dataUpdated}"/> 
-    <aura:if isTrue = "{!v.isListView}">	
-        <div  style="height:400px" >
-            <lightning:datatable class= "cols-table"
-                                 data="{! v.data }"
-                                 columns="{! v.columns }"
-                                 keyField="id"
-                                 onrowaction="{!c.handleRowAction }" 
-                                 onrowselection="{!c.handleRowSelection}"
-                                 onsort="{!c.updateColumnSorting}"
-                                 sortedBy="{!v.sortedBy}"  
-                                 selectedRows="{!v.selectedRows}"
-                                 hideCheckboxColumn = "True"
-                                 sortedDirection="{!v.sortedDirection}"/>
-        </div>                    
-        <aura:set attribute="else">
-            <aura:if isTrue = "{! v.selectedNoOfRecords }">
-                <aura:if isTrue = "{!empty(v.rawDataForFilter)}">
-                    <div class="slds-align_absolute-center" style="height: 300px;background-color:white">
-                        <p class="rdna-style">There are currently no entries in your Today's List.
-                            <p class="rdna-text">To target existing leads or contacts, you can use the Add to Campaign button on Salesforce reports.</p>
-                        </p></div>
+    <aura:if isTrue = "{! v.selectedNoOfRecords }">
+        <aura:if isTrue = "{!empty(v.rawDataForFilter)}">
+            <div class="slds-align_absolute-center" style="height: 300px;background-color:white">
+                <p class="rdna-style">There are currently no entries in your Today's List.
+                    <p class="rdna-text">To target existing leads or contacts, you can use the Add to Campaign button on Salesforce reports.</p>
+                </p></div>
+            <aura:set attribute="else">
+                <aura:if isTrue = "{!empty(v.rawData)}">
+                    <div class="slds-align_absolute-center " style="height: 300px;background-color:white">
+                        <p class="rdna-text-style">Sorry, We couldn't find any results with that name.</p>
+                    </div>
                     <aura:set attribute="else">
-                        <aura:if isTrue = "{!empty(v.rawData)}">
-                            <div class="slds-align_absolute-center " style="height: 300px;background-color:white">
-                                <p class="rdna-text-style">Sorry, We couldn't find any results with that name.</p>
+                        <aura:if isTrue = "{!v.isListView}">
+                            <div  style="height:400px" >
+                                <lightning:datatable
+                                                     class= "cols-table "
+                                                     title="{! v.title }"
+                                                     data="{! v.data }"
+                                                     columns="{! v.columns }"
+                                                     keyField="id"
+                                                     onrowaction="{!c.handleRowAction }" 
+                                                     onrowselection="{!c.handleRowSelection}"
+                                                     onsort="{!c.updateColumnSorting}"
+                                                     sortedBy="{!v.sortedBy}"  
+                                                     selectedRows="{!v.selectedRows}"
+                                                     hideCheckboxColumn = "True"
+                                                     sortedDirection="{!v.sortedDirection}"/>
                             </div>
                             <aura:set attribute="else">
                                 <lightning:datatable
                                                      class= "cols-table "
+                                                     title="{! v.title }"
                                                      data="{! v.data }"
                                                      columns="{! v.columns }"
                                                      keyField="id"
@@ -69,9 +73,28 @@
                         </aura:if>
                     </aura:set>
                 </aura:if>
+            </aura:set>
+        </aura:if>
+        <aura:set attribute="else">
+            <aura:if isTrue = "{!v.isListView}">
+                <div  style="height:400px" >
+                    <lightning:datatable class= "cols-table"
+                                         title="{! v.title }"
+                                         data="{! v.data }"
+                                         columns="{! v.columns }"
+                                         keyField="id"
+                                         onrowaction="{!c.handleRowAction }" 
+                                         onrowselection="{!c.handleRowSelection}"
+                                         onsort="{!c.updateColumnSorting}"
+                                         sortedBy="{!v.sortedBy}"  
+                                         selectedRows="{!v.selectedRows}"
+                                         hideCheckboxColumn = "True"
+                                         sortedDirection="{!v.sortedDirection}"/>
+                </div>  
                 <aura:set attribute="else">
                     <lightning:datatable
                                          class= "cols-table "
+                                         title="{! v.title }"
                                          data="{! v.data }"
                                          columns="{! v.columns }"
                                          keyField="id"
@@ -86,8 +109,16 @@
             </aura:if>
         </aura:set>
     </aura:if>
-    <div>
-        <c:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}" selectedNoOfRecords="{!v.selectedNoOfRecords}"/>	
-    </div>
     
+    <aura:if isTrue = "{!empty(v.rawData)}">
+        <div>
+            <c:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}"/>	
+        </div>
+        
+        <aura:set attribute="else">
+            <div>
+                <c:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}" selectedNoOfRecords="{!v.selectedNoOfRecords}"/>	
+            </div>
+        </aura:set>
+    </aura:if>
 </aura:component>
