--- a/src/aura/DynamicFieldRow/DynamicFieldRow.cmp
+++ b/src/aura/DynamicFieldRow/DynamicFieldRow.cmp
@@ -1,14 +1,14 @@
 <aura:component>
-	 <!-- Aura Attribute for store single Contact[standard Object] Instance
+    <!-- Aura Attribute for store single Contact[standard Object] Instance
          And Store Index of Particular Instance --> 
     <aura:attribute name="objectInstance" type="Object" default="{
-						'fieldDataType': '',
-						'fieldName': '',
-						'fieldLabel': '',
-						'operation': '',
-						'value': '',
-						'id': 1
-					}"/>
+                                                                 'fieldDataType': '',
+                                                                 'fieldName': '',
+                                                                 'fieldLabel': '',
+                                                                 'operation': '',
+                                                                 'value': '',
+                                                                 'id': 1
+                                                                 }"/>
     <aura:attribute name="rowIndex" type="Integer" />
     <aura:attribute name="fieldList" type="List" />
     <aura:attribute name="listPicklistValues" type="List"/>
@@ -25,86 +25,98 @@
     <aura:method name="validateForm" action="{!c.validateForm}"/>
     
     <!-- Table Row -->  
-		    <tr>
-
-		        <td class="rdna-field-values" style="padding-top:25px;"> 
-		            {!v.rowIndex + 1} 
-		        </td>
-		        <td class="rdna-field-label slds-size_1-of-3">                   
-			        <lightning:select aura:id="criterion" class="rdna-field-values" disabled="{!v.isViewMode}" name="fieldName" value="{!v.objectInstance.fieldName}" required="true" onchange="{!c.setPicklistValues}">
-			        	<option value="">Select Field</option>
-			        	<aura:iteration items="{!v.fieldList}" var="field">
-			        		<option value="{!field.fieldName}">{!field.fieldLabel}</option>
-			        	</aura:iteration> 
-			        </lightning:select>
-                    
-		        </td>
-		        <td class="rdna-field-label slds-size_1-of-3"><!-- create a map of operators -->
-		            <lightning:select aura:id="criterion" class="rdna-field-values" disabled="{!v.isViewMode}" name="operator" value="{!v.objectInstance.operation}" required="true">
-			            <option value="">Select Operator</option>
-			            <aura:iteration items="{!v.operatorList}" var="operator">
-			            	<option value="{!operator.value}">{!operator.label}</option>
-			            </aura:iteration>
-		            </lightning:select>
-		        </td>
-		        <td class="rdna-field-label slds-size_1-of-3">
-		            <aura:if isTrue="{!v.fieldDataType == 'Picklist'}">
-		            	<lightning:select aura:id="criterion" disabled="{!v.isViewMode}" name="selectPicklistType" 
-		                              label="Values" class="rdna-field-values"  variant = "label-hidden"  required="true" value="{!v.objectInstance.value}" 
-		                              messageWhenValueMissing="Please Select Field Value">
-		                	<option value="">Select Field value</option>
-			                <aura:iteration items="{!v.listPicklistValues}" var="pickListValue">
-			                    <option value="{!pickListValue}">{!pickListValue}</option>
-			                </aura:iteration>
-		            	</lightning:select>
-		            	<aura:set attribute="else">
-			            	<aura:if isTrue="{!v.fieldDataType == 'Boolean'}">
-			            		<lightning:select aura:id="criterion" disabled="{!v.isViewMode}" name="selectBooleanType" 
-			                                      label="Values" class="rdna-field-values"  variant = "label-hidden"  required="true" value="{!v.objectInstance.value}" 
-			                                      messageWhenValueMissing="Please Select Field Value">
-			                        <option value="">Select Field value</option>
-			                        <option value="true">True</option>
-			                        <option value="false">False</option>
-			                    </lightning:select>
-                                <!--Edit-->
-				            	<aura:set attribute="else">
-				            		<aura:if isTrue="{!v.fieldDataType == 'Number'}"> 
- 			            			<lightning:input aura:id="criterion" class="rdna-field-values"  disabled="{!v.isViewMode}" type="number"  label=" "
-						                        name="numbers"
-						                        placeholder="Enter Numbers"
-						                        required="true"
-                                                min="0"
-						                        value="{!v.objectInstance.value}"
-                                                messageWhenRangeUnderflow="Enter Valid Number"/> 
-				                        <aura:set attribute="else">
-				                        	<lightning:input aura:id="criterion" class="rdna-field-values"  disabled="{!v.isViewMode}" label=" "
-			                                    name="inputString" 
-			                                    value="{!v.objectInstance.value}"
-			                                    placeholder = "Enter Details"
-			                                    messageWhenBadInput = "Please Enter Detail"
-			                                    required="true"/> 
-				                        </aura:set>
-				            		</aura:if>
-				            	</aura:set>
-                                <!--Edit-->
-			            	</aura:if>
-		            </aura:set>
-		            </aura:if>
-		            
-		        </td>
-		        <td class="rdna-bgcolor">
-		        	 <div class="slds-form-element slds-p-bottom-small ">
-		        	 	<aura:if isTrue="{!not(v.isViewMode)}">
-                            <aura:if isTrue="{!v.rowIndex > 0}">
-                                <a onclick="{!c.removeRow}">
-                                    <div style="padding-top:25px;">
-                                        <img class = "OvalCriteria" src="{!$Resource.cadence_icons + '/delete/delete@3x.png'}"/>
-                                    </div>
-                                </a>
-				        	</aura:if> 
-			        	</aura:if>
-		        	</div> 
-		        </td>  
-		    </tr>
+    <tr>
+        
+        <td class="rdna-field-values" style="padding-top:25px;"> 
+            {!v.rowIndex + 1}
+        </td>
+        <td class="rdna-field-label slds-size_1-of-3">                   
+            <lightning:select aura:id="criterion" class="rdna-field-values" disabled="{!v.isViewMode}" name="fieldName" value="{!v.objectInstance.fieldName}" required="true" onchange="{!c.setPicklistValues}">
+                <option value="">Select Field</option>
+                <aura:iteration items="{!v.fieldList}" var="field">
+                    <option value="{!field.fieldName}">{!field.fieldLabel}</option>
+                </aura:iteration> 
+            </lightning:select>
+            
+        </td>
+        <td class="rdna-field-label slds-size_1-of-3"><!-- create a map of operators -->
+            <lightning:select aura:id="criterion" class="rdna-field-values" disabled="{!v.isViewMode}" name="operator" value="{!v.objectInstance.operation}" required="true">
+                <option value="">Select Operator</option>
+                <aura:iteration items="{!v.operatorList}" var="operator">
+                    <option value="{!operator.value}">{!operator.label}</option>
+                </aura:iteration>
+            </lightning:select>
+        </td>
+        <td class="rdna-field-label slds-size_1-of-3">
+            <aura:if isTrue="{!v.fieldDataType == 'Picklist'}">
+                <lightning:select aura:id="criterion" disabled="{!v.isViewMode}" name="selectPicklistType" 
+                                  label="Values" class="rdna-field-values"  variant = "label-hidden"  required="true" value="{!v.objectInstance.value}" 
+                                  messageWhenValueMissing="Please Select Field Value">
+                    <option value="">Select Field value</option>
+                    <aura:iteration items="{!v.listPicklistValues}" var="pickListValue">
+                        <option value="{!pickListValue}">{!pickListValue}</option>
+                    </aura:iteration>
+                </lightning:select>
+                <aura:set attribute="else">
+                    <aura:if isTrue="{!v.fieldDataType == 'Boolean'}">
+                        <lightning:select aura:id="criterion" disabled="{!v.isViewMode}" name="selectBooleanType" 
+                                          label="Values" class="rdna-field-values"  variant = "label-hidden"  required="true" value="{!v.objectInstance.value}" 
+                                          messageWhenValueMissing="Please Select Field Value">
+                            <option value="">Select Field value</option>
+                            <option value="true">True</option>
+                            <option value="false">False</option>
+                        </lightning:select>
+                        <!--Edit-->
+                        <aura:set attribute="else">
+                            <aura:if isTrue="{!v.fieldDataType == 'Number'}"> 
+                                <lightning:input aura:id="criterion" class="rdna-field-values"  disabled="{!v.isViewMode}" type="number"  label=" "
+                                                 name="numbers"
+                                                 placeholder="Enter Numbers"
+                                                 required="true"
+                                                 min="0"
+                                                 value="{!v.objectInstance.value}"
+                                                 messageWhenRangeUnderflow="Enter Valid Number"/> 
+                                <aura:set attribute="else">
+                                    
+                                    <aura:if isTrue="{!v.fieldDataType == 'Email'}">
+                                        <lightning:input aura:id="criterion" class="rdna-field-values"  disabled="{!v.isViewMode}" label=" "
+                                                         name="inputString" 
+                                                         value="{!v.objectInstance.value}"
+                                                         placeholder = "Enter Email Address" type="email"
+                                                         messageWhenBadInput = "Please Enter Valid Email Address"
+                                                         required="true"/> 
+                                        <aura:set attribute="else">
+                                            <lightning:input aura:id="criterion" class="rdna-field-values"  disabled="{!v.isViewMode}" label=" "
+                                                             name="inputString" 
+                                                             value="{!v.objectInstance.value}"
+                                                             placeholder = "Enter Details"
+                                                             messageWhenBadInput = "Please Enter Detail"
+                                                             required="true"/> 
+                                        </aura:set>
+                                    </aura:if>
+                                    
+                                </aura:set>
+                            </aura:if>
+                        </aura:set>
+                        <!--Edit-->
+                    </aura:if>
+                </aura:set>
+            </aura:if>
+            
+        </td>
+        <td class="rdna-bgcolor">
+            <div class="slds-form-element slds-p-bottom-small ">
+                <aura:if isTrue="{!not(v.isViewMode)}">
+                    <aura:if isTrue="{!v.rowIndex > 0}">
+                        <a onclick="{!c.removeRow}">
+                            <div style="padding-top:25px;">
+                                <img class = "OvalCriteria" src="{!$Resource.cadence_icons + '/delete/delete@3x.png'}"/>
+                            </div>
+                        </a>
+                    </aura:if> 
+                </aura:if>
+            </div> 
+        </td>  
+    </tr>
     
 </aura:component>
