--- a/src/aura/ProgressBarComponent/ProgressBarComponent.css
+++ b/src/aura/ProgressBarComponent/ProgressBarComponent.css
@@ -38,5 +38,7 @@
     letter-spacing: normal;
     text-align: center;
     color:#cccccc;
+    padding-top: 7px;
+
 }
 /*---------------------------------------------------------*/
