--- a/src/aura/ActionDetailView/ActionDetailView.cmp
+++ b/src/aura/ActionDetailView/ActionDetailView.cmp
@@ -12,11 +12,17 @@
     <!--participants datatable attributes-->
     <aura:attribute name="partRawData" type="List"/>
     <aura:attribute name="partColumns" type="List"/>
+    <aura:attribute name="partColumnsContact" type="List"/>
     <aura:attribute name="partRowsToLoad" type="Integer" default="5"/>				<!--Rows per page-->
     <!--create a component attributs -->
     <aura:attribute name="spinner" type="boolean" default="false"/>
     <c:SpinnerComponent spinnerSync = "{!v.spinner}"/>
     
+    <aura:attribute name="setCompanyRow" type="boolean" default = "false"/>
+    <aura:handler name="change" value="{!v.setCompanyRow}" action="{!c.setCompanyRow}"/> 
+    <aura:attribute name="data" type="List"/>
+    <aura:handler name="cadencePagination" event="c:CadPagination" action="{!c.handlePagination}"/>
+    <aura:handler name="change" value="{!v.data}" action="{!c.handlePagination}"/> 
     <aura:attribute name="themeName" type="String"/>
     <!-- PAGE HEADER -->
     <div class="slds-page-header" style="background-color: #fafafa">
@@ -27,6 +33,7 @@
                 <img class = "rdna-logo" src="{!$Resource.cadence_icons + '/rdna-logo/rdna-logo@2x.png'}"/>
             </div>
             <div class="slds-col slds-has-flexi-truncate slds-m-left_small">
+                
                 <!-- HEADING AREA -->
                 <p class="slds-line-height_reset rdna-header-small slds-p-left_xx-small">Actions</p>
                 <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate rdna-header-large">{!v.record.Name}</h1>
@@ -55,7 +62,12 @@
 	                </div>
 	                <div class="slds-col slds-size_3-of-12">
 	                    <p class="slds-line-height_reset slds-m-bottom_xx-small field-label">Template</p>
-                        <span class="field-value"> <a class="rdna-bgcolor" href="{!'/' + v.record.RDNACadence__Template_Id__c}" target="_blank">{!v.record.RDNACadence__Template_Name__c}</a></span>
+                        <aura:if isTrue = "{!v.record.RDNACadence__Type__c == 'Email'}">
+                            <span class="field-value"> <a class="rdna-bgcolor" href="{!'/' + v.record.RDNACadence__Template_Id__c}" target="_blank">{!v.record.RDNACadence__Template_Name__c}</a></span>
+                            <aura:set attribute="else">
+                                <span class="field-value">{!v.record.RDNACadence__Template_Name__c}</span>
+                            </aura:set>
+                        </aura:if>
 	                </div>
    	                <div class="slds-col slds-size_3-of-12">
 	                    <p class="slds-line-height_reset slds-m-bottom_xx-small field-label">Activation Type</p>
@@ -76,7 +88,9 @@
                 <p class=" rdna-field-values rdna-link-height slds-m-top_x-small">List of all related participants associated with this action.</p>
 
 	            <div class="slds-m-top_medium slds-p-bottom_medium slds-p-right_medium">
-	    			<c:Datatable columns = "{!v.partColumns}" rawData = "{!v.partRawData}" rowsToLoad = "{!v.partRowsToLoad}" hideCheckboxColumn = "true" aura:id = "datatable2"/>    
+	    			<c:Datatable columns = "{!v.partColumns}" 
+                                           rawData = "{!v.partRawData}"  data="{!v.data}" 
+                                           rowsToLoad = "{!v.partRowsToLoad}" hideCheckboxColumn = "true" aura:id = "datatable2"/>    
 				</div>
 	            
 	        </div>
