--- a/src/aura/ActionDetails/ActionDetails.css
+++ b/src/aura/ActionDetails/ActionDetails.css
@@ -142,9 +142,9 @@
 
 .THIS .Oval {
     width: 20px;
-    height: 20px;
-    margin-top:26px;
-    margin-left: 6px;
+    height: 29px;
+    margin-top: 14px;
+    margin-left: 16px;
 }
 /* Action template styling */
 .THIS .rdna-template-bold{
@@ -165,3 +165,31 @@
     letter-spacing: normal;
     color: #000000;
 }
+
+.THIS .option-style{
+    border-radius: 10px;
+    background-color: #ffffff;
+}
+
+/*.THIS .slds-dropdown-trigger.slds-is-open .slds-listbox__option.slds-has-focus {
+    background-color: blue;
+}
+
+.THIS .slds-input:focus, .THIS .slds-input:active {
+    border-color: cyan;
+    box-shadow: 0 0 3px green;
+}
+
+.THIS .select-auto-width {
+    border-radius: 3px;
+    background-color: red;
+}
+
+.THIS .select-auto-width > .slds-form-element__control {
+    border-radius: 3px;
+    background-color: red;
+}
+.THIS .select-auto-width > .slds-form-element__control > .slds-select_container{
+    border-radius: 3px;
+    background-color: red;
+} */
