--- a/src/aura/Pagination/Pagination.cmp
+++ b/src/aura/Pagination/Pagination.cmp
@@ -12,7 +12,7 @@
     <aura:attribute name="selectedNoOfRecords" type="Boolean" default="false"/> 
     
     
-    <div class="slds-grid slds-m-top_x-small slds-m-left_x-small">      
+    <div class="slds-grid slds-m-top_x-small slds-m-left_x-small" styleClass="pagedropdown">      
         <div class="slds-col slds-size_2-of-3">
             <lightning:button disabled="{!v.page == 0 || v.page == 1}" class="rdna-button-text-before slds-text-align_center" aura:id="firstPage" variant="brand" label="First" onclick="{! c.firstPage }" />            
             <lightning:button disabled="{!v.page == 0 || v.page == 1}" class="rdna-button-text-before slds-text-align_center slds-p-left_x-small slds-p-right_x-small"  aura:id="previousPage" variant="brand" label="Previous" onclick="{! c.previousPage }" />
@@ -27,7 +27,7 @@
                 Records per page: 
             </div>
             <div class="slds-float--right slds-size_1-of-10 slds-align--absolute-center slds-p-bottom_x-large slds-m-bottom_large rdna-button-text " >            
-                <ui:inputSelect  class="slds-m-left_small  slds-size_1-of-7 rdna-field-values " aura:id="recordSize" label="" change="{!c.onSelectChange}">
+                <ui:inputSelect  class="slds-m-left_small  slds-size_1-of-7 rdna-field-values rdna-pageSelect" aura:id="recordSize" label="" change="{!c.onSelectChange}">
                     <ui:inputSelectOption text="{!v.total}" label="All" /> 
                     <ui:inputSelectOption text="25" label="25" value="true"/>
                     <ui:inputSelectOption text="50" label="50"/>
