--- a/src/pages/Cadence.page
+++ b/src/pages/Cadence.page
@@ -1,4 +1,7 @@
 <apex:page standardcontroller="Cadence__c" sidebar="false"  tabStyle="Cadence_Classic__tab">
+    <style type="text/css">
+    .slds-button__icon_x-small { width: 0px !important; height: 0px !important;}
+    </style>
     <script src="/lightning/lightning.out.js"/>
     <apex:slds />
     <div id="myDivId4" />
